--- a/Java/src/main/resources/application.properties
+++ b/Java/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+springdoc.swagger-ui.path=/api-docs-ui
+springdoc.api-docs.path=/api-docs-json
